// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-kXOizl iyullj aje-input__search"
  >
    <label
      class="sc-jUkaYT iWzyBP"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-jZTQcj befwUX aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-cSaEAk cPazYe"
        id="react-aria-:r5:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        class="sc-jBIHhB hmWfwD aje-btn sc-cMqPwU gSYJMO aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-FEMpB jyuubH aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-kXOizl iyullj aje-input__search"
  >
    <label
      class="sc-jUkaYT iWzyBP"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-jZTQcj befwUX aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-cSaEAk cPazYe"
        id="react-aria-:r0:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        class="sc-jBIHhB hmWfwD aje-btn sc-cMqPwU gSYJMO aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-FEMpB jyuubH aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
